// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Icon Outlined Delete Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-delete NatDSIcon-root-1066 NatDSIcon-standardFontSize-1070"
>
  outlined-action-delete
</i>
`;

exports[`Storyshots Components/Icon Outlined Email Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-communication-email NatDSIcon-root-1082 NatDSIcon-standardFontSize-1086"
>
  outlined-communication-email
</i>
`;

exports[`Storyshots Components/Icon Outlined Favorite Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-favorite NatDSIcon-root-1050 NatDSIcon-standardFontSize-1054"
>
  outlined-action-favorite
</i>
`;

exports[`Storyshots Components/Icon Outlined Network Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-social-network NatDSIcon-root-1098 NatDSIcon-standardFontSize-1102"
>
  outlined-social-network
</i>
`;

exports[`Storyshots Components/Icon Outlined Person Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-social-person NatDSIcon-root-1034 NatDSIcon-standardFontSize-1038"
>
  outlined-social-person
</i>
`;

exports[`Storyshots Components/Icon Playground 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-842 NatDSIcon-standardFontSize-846"
>
  filled-default-mockup
</i>
`;

exports[`Storyshots Components/Icon Sizes 1`] = `
<div>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1114 NatDSIcon-microFontSize-1115"
  >
    filled-default-mockup
  </i>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1114 NatDSIcon-tinyFontSize-1116"
  >
    filled-default-mockup
  </i>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1114 NatDSIcon-smallFontSize-1117"
  >
    filled-default-mockup
  </i>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1114 NatDSIcon-standardFontSize-1118"
  >
    filled-default-mockup
  </i>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1114 NatDSIcon-mediumFontSize-1119"
  >
    filled-default-mockup
  </i>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1114 NatDSIcon-largeFontSize-1120"
  >
    filled-default-mockup
  </i>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1114 NatDSIcon-largeXFontSize-1122"
  >
    filled-default-mockup
  </i>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1114 NatDSIcon-largeXXFontSize-1124"
  >
    filled-default-mockup
  </i>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1114 NatDSIcon-hugeFontSize-1125"
  >
    filled-default-mockup
  </i>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1114 NatDSIcon-hugeXFontSize-1127"
  >
    filled-default-mockup
  </i>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-1114 NatDSIcon-hugeXXFontSize-1129"
  >
    filled-default-mockup
  </i>
</div>
`;

exports[`Storyshots Components/Icon Small Add Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-add NatDSIcon-root-922 NatDSIcon-smallFontSize-925"
>
  outlined-action-add
</i>
`;

exports[`Storyshots Components/Icon Small Close Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-close NatDSIcon-root-906 NatDSIcon-smallFontSize-909"
>
  outlined-navigation-close
</i>
`;

exports[`Storyshots Components/Icon Small Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-874 NatDSIcon-smallFontSize-877"
>
  filled-default-mockup
</i>
`;

exports[`Storyshots Components/Icon Small Natura Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-brand-naturarosacea NatDSIcon-root-890 NatDSIcon-smallFontSize-893"
>
  filled-brand-naturarosacea
</i>
`;

exports[`Storyshots Components/Icon Standard Add Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-add NatDSIcon-root-858 NatDSIcon-standardFontSize-862"
>
  outlined-action-add
</i>
`;

exports[`Storyshots Components/Icon Tiny Close Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-close NatDSIcon-root-954 NatDSIcon-tinyFontSize-956"
>
  outlined-navigation-close
</i>
`;

exports[`Storyshots Components/Icon Tiny Filter Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-filter NatDSIcon-root-1002 NatDSIcon-tinyFontSize-1004"
>
  outlined-action-filter
</i>
`;

exports[`Storyshots Components/Icon Tiny Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-default-mockup NatDSIcon-root-938 NatDSIcon-tinyFontSize-940"
>
  filled-default-mockup
</i>
`;

exports[`Storyshots Components/Icon Tiny Menu Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-filled-navigation-menu NatDSIcon-root-970 NatDSIcon-tinyFontSize-972"
>
  filled-navigation-menu
</i>
`;

exports[`Storyshots Components/Icon Tiny My Profile Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-social-myprofile NatDSIcon-root-1018 NatDSIcon-tinyFontSize-1020"
>
  outlined-social-myprofile
</i>
`;

exports[`Storyshots Components/Icon Tiny Search Icon 1`] = `
<i
  aria-hidden={true}
  className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-search NatDSIcon-root-986 NatDSIcon-tinyFontSize-988"
>
  outlined-action-search
</i>
`;
